--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 						<h1 style="margin-top: 50px;">Theo hãng</h1>
 						<a href="button1.html">	<button class="product__filter--btn outline brand ">Dior</button></a>
 						<a href="LV.html">	<button class="product__filter--btn outline brand">Louis Vulton</button></a>
-						<a href="To .html">	<button class="product__filter--btn outline brand">Tom Ford</button></a>
+						<a href="Tom.html">	<button class="product__filter--btn outline brand">Tom Ford</button></a>
 						<a href="gucci.html">	<button class="product__filter--btn outline brand">Gucci</button></a>
 						<a href="CK.html">	<button class="product__filter--btn outline brand">Calvin Klein</button></a>
 					</div>
