--- a/indexfind.html
+++ b/indexfind.html
@@ -200,17 +200,17 @@
 				<div class="product__filter outline">
 					<div class="product__filter--brand">
 						<h1 style="margin-top: 50px;">Theo hãng</h1>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Dior</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Louis Vulton</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Tom Ford</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Gucci</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Calvin Klein</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline brand ">Dior</button></a>
+						<a href="LV.html">	<button class="product__filter--btn outline brand">Louis Vulton</button></a>
+						<a href="Tom.html">	<button class="product__filter--btn outline brand">Tom Ford</button></a>
+						<a href="gucci.html">	<button class="product__filter--btn outline brand">Gucci</button></a>
+						<a href="CK.html">	<button class="product__filter--btn outline brand">Calvin Klein</button></a>
 					</div>
 					<div class="product__filter--type">
 						<h1>Theo giới tính</h1>
-						<button class="product__filter--btn outline sex nam"><a href="button1.html">Nam</a></button>
-						<button class="product__filter--btn outline sex nu"><a href="button1.html">Nữ</a></button>
-						<button class="product__filter--btn outline sex"><a href="button1.html">Unisex</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline sex nam">Nam</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline sex nu">Nữ</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline sex">Unisex</button></a>
 					</div>
 					<div class="product__filter--price">
 						<h1 >Sắp xếp</h1>
@@ -228,14 +228,14 @@
 						<h3>Khoảng giá</h2>
 							<input class="product__filter--input outline from" type="text" placeholder="Từ">
 							<input class="product__filter--input outline to" type="text" placeholder="Đến">
-							<div class="findPrice">Tìm Kiếm</div>
+							<a href="indexfind.html"><div class="findPrice">Tìm Kiếm</div></a>
 					</div>
 					<div class="product__filer--rating">
 						<h1>Theo đánh giá</h1>
-						<button class="product__filter--btn outline star"><a href="button1.html">4★-5★</a></button>
-						<button class="product__filter--btn outline star"><a href="button1.html">3★-4★</a></button>
-						<button class="product__filter--btn outline star"><a href="button1.html">2★-3★</a></button>
-						<button class="product__filter--btn outline star"><a href="button1.html">1★-2★</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline star">4★-5★</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline star">3★-4★</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline star">2★-3★</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline star">1★-2★</button></a>
 					</div>
 				</div>
 				<div class="product__box">
