--- a/indextrang3.html
+++ b/indextrang3.html
@@ -177,10 +177,10 @@
 					<div class="product__filter--brand">
 						<h1 style="margin-top: 50px;">Theo hãng</h1>
 						<a href="button1.html">	<button class="product__filter--btn outline brand ">Dior</button></a>
-						<a href="button1.html">	<button class="product__filter--btn outline brand">Louis Vulton</button></a>
-						<a href="button1.html">	<button class="product__filter--btn outline brand">Tom Ford</button></a>
-						<a href="button1.html">	<button class="product__filter--btn outline brand">Gucci</button></a>
-						<a href="button1.html">	<button class="product__filter--btn outline brand">Calvin Klein</button></a>
+						<a href="LV.html">	<button class="product__filter--btn outline brand">Louis Vulton</button></a>
+						<a href="Tom.html">	<button class="product__filter--btn outline brand">Tom Ford</button></a>
+						<a href="gucci.html">	<button class="product__filter--btn outline brand">Gucci</button></a>
+						<a href="CK.html">	<button class="product__filter--btn outline brand">Calvin Klein</button></a>
 					</div>
 					<div class="product__filter--type">
 						<h1>Theo giới tính</h1>
