--- a/button1.html
+++ b/button1.html
@@ -53,7 +53,7 @@
 								<div class="usersection">Xin chào,user</div>
 							</li>
 							<li>
-								<div class="usersection logout">| Đăng xuất</div>
+								<div class="usersection logout"><a href="index.html">| Đăng xuất</a></div>
 							</li>
 						</div>
 					</div>
