--- a/dhsg.html
+++ b/dhsg.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="css/notification.css">
+    <link rel="stylesheet" href="css/font.css">
 </head>
 
 <body>
